syntax = "proto3";

package zksync.config;

message FriProverGateway {
  optional string api_url = 1; // required
  optional uint32 api_poll_duration_secs = 2; // required; s
  optional uint32 prometheus_listener_port = 3; // required; u16
  optional string prometheus_pushgateway_url = 4; // required
  optional uint64 prometheus_push_interval_ms = 5; // optional; ms
}
